--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                 </h2>
                             </div>
                             <input type="text" id="myWeather">
-                            <div id="btn" class="d-flex flex-direction-column">Search</div>
+                            <div class="btn" id="btn">Search</div>
                         </div>
                     </div>
                 </div>
